--- a/zico.html
+++ b/zico.html
@@ -58,9 +58,52 @@
    <tr>
       <td class="1"><em>parafuso kg</em></td>
       <td class="2"><b>R$30,00</b></td>
+      <td class="3"><em>desenrroladinho de cenoura kg</em></td>
+      <td class="4"><b>R$200,00</b></td>
+      <td class="5"><em>joão duro unidade</em></td>
+      <td class="6"><b>R$17,00</b></td>
    </tr>
+>
+
+
     </table>
-</center>
+    
+    <center><h1 class="estabelecimento"><b>CONFIRA NOSSO ESTABELECIMENTO</b></h1></center>
+    <center><h1 class="almoço"><b>TAMBEM TEMOS ALL MOSSO</b></h1></center>
+    <center><h1><b>CONFIRA</b></h1></center>
+
+    <center>
+        <table border="1">
+        <tr>
+            <td class="1"><b>SEGUNDA</b></td>
+             <td class="2"><b>TERÇA</b></td>
+            <td class="3"><b>QUARTA</b></td>
+            <td class="4"><b>QUINTA</b></td>
+            <td class="5"><b>SEXTA</b></td>
+            <td class="6"><b>SABADO</b></td>
+
+            <tr>
+          <td class="1"><em>moqueca de piranha</em></td>
+          <td class="2"><em>strogonof de figado</em></td>
+          <td class="3"><em>prato desfeito</em></td>
+          <td class="4"><em>macarrão com ovo frito</em></td>
+          <td class="5"><em>parmegiana de brocolis</em></td>
+          <td class="6"><em>kibe com manga</em></td>
+         </tr>
+
+         <tr>
+         <td class="1"><b>R$70,00</b></td>
+          <td class="2"><b>R$100,00</b></td>
+          <td class="3"><b>R$60,00</b></td>
+          <td class="4"><b>R$55,00</b></td>
+          <td class="5"><b>R$150,00</b></td>
+          <td class="6"><b>R$22,33</b></td>
+        </tr>
+        </center> 
+    </table>
+
+
+    <center><h1 class="estabelecimento"><b>CONFIRA NOSSO ESTABELECIMENTO</b></h1></center>
 </header>
 </body>
 </html>
