--- a/restaurante.html
+++ b/restaurante.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="white.css">
 </head>
 <body>
-    <center><h1 class="luagr"><b>CONFIRA NOSSO BALCÂO</b></h1></center>
+    <center><h1 class="luagr"><b>CONFIRA NOSSO BALCÃO</b></h1></center>
 
     <center><img class="balcao" src="images (8).jpeg"></center>
-    <center><img src="download.jpeg" alt=""></center>
-    
+    <center><img class="balcao2" src="download.jpeg"></center>
+<a href="https://youtu.be/uZpMmP5EUEI"></a>
+
+
+<center><h1 class="luagr2"><b>MESAS DE JANTAR</b></h1></center>
+<img class="medo" src="scary-face.gif">
+
+<center><img class="mesas" src="abandoned-mountainside-restaurant (1).jpg"></center>
+
+<center><h1 class="lugar3"><b>E NOSSA COZINHA COM OS MELHORES PRODUTOS</b></h1></center> <img class="medo" src="scary-face.gif">
+
+<center><img class="cozinha" src="depositphotos_309622428-stock-photo-abandoned-and-ruined-kitchen-of.jpg"></center>
+
+<center><h1 class="lugar4"><b>E ESSE FOI O NOSSO LINDO LUGAR!!!</b></h1></center>
+<center><img class="por-fora" src="download (1).jpeg"></center>
+
+
+<center><a href="https://youtu.be/c25p5j1xr9Y">NOSSA LOCALIZAÇÃO AQUI!!!</a></center>
+<center><img class="medo" src="scary-face.gif"></center>
+<center><img class="medo" src="scary-face.gif"></center>
+<center><img class="medo" src="scary-face.gif"></center>
+<center><img class="medo" src="scary-face.gif"></center>
+<center><img class="medo" src="scary-face.gif"></center>
+<center><img class="medo2" src="scary-face.gif"></center>
+
 </body>
 </html>
+
