--- a/zico.html
+++ b/zico.html
@@ -18,6 +18,8 @@
 
 <header class="cardapio">
 <center>
+    <center><img class="medo" src="scary-face.gif"></center>
+
     <table border="1">
     <tr>
         <td class="1"><b>POẼS</b></td>
@@ -103,7 +105,10 @@
     </table>
 
 
-    <center><h1 class="estabelecimento"><b>CONFIRA NOSSO ESTABELECIMENTO</b></h1></center>
+     
+  <center><a href="file:///home/escola/%C3%81rea%20de%20Trabalho/victor%20farias/restaurante.html">CONFIRA NOSSO ESTABELECIMENTO</a></center> 
+
+    
 </header>
 </body>
 </html>
